<resources>
    <string name="app_name">Full Integration Demo</string>
    <string name="button_init">INIT</string>
    <string name="button_inputaccount">INPUTACCOUNTWITHEMV</string>
    <string name="button_authorize">AUTHORIZECARD</string>
    <string name="button_complete">COMPLETEONLINEEMV</string>
    <string name="button_remove">REMOVECARD</string>
    <string name="button_getpin">GETPINBLOCK</string>
    <string name="input_amt">Amount</string>
    <string name="swipe_flag">MagneticSwipeEntryFlag</string>
    <string name="manual_flag">ManualEntryFlag</string>
    <string name="tap_flag">ContactlessEntryFlag</string>
    <string name="chip_flag">ContactEMVEntryFlag</string>
    <string name="encryption_flag">EncryptionFlag</string>
    <string name="keyslot">KeySlot</string>
    <string name="timeout">Timeout</string>
    <string-array name="edc_type">
        <item>CREDIT</item>
        <item>DEBIT</item>
        <item>EBT</item>
        <item>GIFT</item>
    </string-array>
    <string-array name="trans_type">
        <item>SALE</item>
        <item>VOID</item>
        <item>RETURN</item>
        <item>AUTH</item>
        <item>POSTAUTH</item>
        <item>VERIFY</item>
        <item>ADJUST</item>
        <item>TOKENIZE</item>
    </string-array>
    <string name="button_process">Start to Process</string>
    <string name="res_code">Result Code</string>
    <string name="res_text">Result Text</string>
    <string name="entrymode">Entry Mode</string>
    <string name="t1">Track1 Data</string>
    <string name="t2">Track2 Data</string>
    <string name="t3">Track3 Data</string>
    <string name="pan">PAN</string>
    <string name="mpan">MaskedPAN</string>
    <string name="ksn">KSN</string>
    <string name="emvdata">EMVData</string>
    <string name="expirydate">Expiry Date</string>
    <string name="card">CardHolder</string>
    <string name="servicecode">Service Code</string>
    <string name="clsstranspath">ContactlessTransactionPath</string>
    <string name="clssauthres">ContactlessAuthorizeResult</string>
    <string name="encryption_type">Encryption Type</string>
    <string name="authres">Authorization Result</string>
    <string name="sign_flag">Signature Flag</string>
    <string name="pinblock">PIN Block</string>
    <string name="pinbypass">PIN Bypass Status</string>
    <string name="onlineauthres">OnlineAuthorizationResult</string>
    <string name="msg1">Message1</string>
    <string name="msg2">Message2</string>
    <string name="pinpad">Pinpad Type</string>
    <string name="resp_code">ResponseCode</string>
    <string name="checkfile">CHECKFILE</string>
    <string name="filename">File Name</string>
    <string name="checksum">Checksum</string>
    <string name="accountnum">Account Number</string>
    <string name="card_num">Please Input Account</string>
    <string name="button_confirm">Confirm</string>
</resources>